After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778277 - Wrong action when clicking on SMB server
Wrong action when clicking on SMB server
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
git master
Other Linux
: Normal normal
: ---
Assigned To: Felipe Borges
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-07 11:48 UTC by Marek Kašík
Modified: 2017-02-07 12:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
printers: Authenticate samba server also on double-click (1.93 KB, patch)
2017-02-07 12:14 UTC, Felipe Borges
committed Details | Review

Description Marek Kašík 2017-02-07 11:48:46 UTC
When I double-click on a SMB server in the new printer dialog I get the "Failed to add new printer." dialog instead of the authentication one.
Comment 1 Felipe Borges 2017-02-07 12:14:49 UTC
Created attachment 345105 [details] [review]
printers: Authenticate samba server also on double-click

The "Add Printer" dialog should be smart enough to know whether
an item listed in the dialog is a samba server or just a printer.
If it is a samba server, it should go for the authentication page
instead of emitting a GTK_RESPONSE_*.
Comment 2 Marek Kašík 2017-02-07 12:35:01 UTC
Review of attachment 345105 [details] [review]:

Thank you for the fix. Push it to master branch please.
Comment 3 Felipe Borges 2017-02-07 12:42:40 UTC
Attachment 345105 [details] pushed as fc073f2 - printers: Authenticate samba server also on double-click